crates/solidity/testing/snapshots/bindings_output/using/top_level/generated/0.7.4-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or ContractKeyword or EnumKeyword or FixedKeyword or FunctionKeyword or Identifier or ImportKeyword or IntKeyword or InterfaceKeyword or LibraryKeyword or MappingKeyword or PragmaKeyword or StringKeyword or StructKeyword or UfixedKeyword or UintKeyword.
    ╭─[input.sol:7:1]
    │
  7 │ ╭─▶ using {increment} for Counter;
    ┆ ┆   
 13 │ ├─▶ }
    │ │       
    │ ╰─────── Error occurred here.
────╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ struct Counter {
   │        ───┬───  
   │           ╰───── name: 1
 2 │     uint value;
   │          ──┬──  
   │            ╰──── name: 2
   │ 
 5 │ function increment(Counter memory _counter) public {}
   │          ────┬──── ───┬───        ────┬───  
   │              ╰────────────────────────────── name: 3
   │                       │               │     
   │                       ╰───────────────────── ref: 1
   │                                       │     
   │                                       ╰───── name: 4
───╯
Definiens: 
   ╭─[input.sol:1:1]
   │
 1 │   ╭─▶ struct Counter {
 2 │   │       uint value;
   │   │   ────────┬───────  
   │   │           ╰───────── definiens: 2
 3 │ │ ├─▶ }
   │ │ │       
   │ │ ╰─────── definiens: 1
 4 │ ╭───▶ 
 5 │ ├───▶ function increment(Counter memory _counter) public {}
   │ │                        ───────────┬───────────              
   │ │                                   ╰───────────────────────── definiens: 4
   │ │                                                             
   │ ╰───────────────────────────────────────────────────────────── definiens: 3
───╯
